# falcon_project

./: .env.example  .gitignore  Makefile  TODO  pyproject.toml
apps/: admin.py  context_processors.py  factories.py  forms.py  mixins.py  urls.py  utils.py  views.py
apps/management/commands/: add_data.py
apps/migrations/: 0001_initial.py  0002_remove_product_discount_percentage_gte_0_lte_110_and_more.py  0002_user_type.py  0003_cart_cartitem.py  0004_alter_cart_user.py  0005_alter_cartitem_cart_alter_cartitem_product_order_and_more.py
apps/models/: __init__.py  base.py  orders.py  products.py  users.py
apps/templatetags/: custom_tags.py
locale/en/LC_MESSAGES/: django.po
locale/uz/LC_MESSAGES/: django.po
root/: settings.py  urls.py
templates/apps/: 404.html  base.html  main_base.html  registration_email.html
templates/apps/auth/: login.html  profile.html  register.html
templates/apps/products/: checkout.html  order-details.html  orders.html  product-details.html  product-grid.html  shopping-cart.html
templates/falcon-v2.8.2/: .eslintrc.json  .gitignore  README.md  figmafile.md  gulpfile.js  package.json
templates/falcon-v2.8.2/js/theme/: Utils.js  animated-progressbar.js  bootstrap-wizard.js  bulk-select.js  chart.js  chat.js  config.dark-mode.js  config.navbar-vertical.js  copy-link.js  datatable.js  demo-mode.js  detector.js  draggable.js  dropdown-menu.js  dropzone.js  (+28 more)
templates/falcon-v2.8.2/pages/: calendar.html  changelog.html  chat.html  index.html  kanban.html  widgets.html
templates/falcon-v2.8.2/scss/: theme-dark.scss  theme.scss
(+174 files in other folders)
